--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
 }
 
 dependencies {
@@ -43,4 +47,8 @@ dependencies {
     //沉浸式状态栏
     implementation 'com.gyf.immersionbar:immersionbar:3.0.0-beta03'
     implementation 'com.gyf.immersionbar:immersionbar-components:3.0.0-beta03'
+
+    //RxJava+RxAndroid
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
 }
