--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: "androidx.navigation.safeargs"
 apply plugin: 'com.jakewharton.butterknife'
 android {
     compileSdkVersion 29
@@ -36,8 +35,6 @@ dependencies {
     def lifecycle_version = "2.1.0"
     def nav_version = "2.2.0-beta01"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
-    implementation "androidx.navigation:navigation-fragment:$nav_version"
-    implementation "androidx.navigation:navigation-ui:$nav_version"
     implementation "androidx.lifecycle:lifecycle-extensions:2.1.0"
 
     //butterknife
@@ -51,4 +48,10 @@ dependencies {
     //RxJava+RxAndroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
+
+    //夜神Fragment
+    implementation 'me.yokeyword:fragmentationx:1.0.1'
+    //导入EventBus
+    implementation 'me.yokeyword:eventbus-activity-scope:1.1.0'
+    implementation 'org.greenrobot:eventbus:3.1.1'
 }
